# remote_ctrl

./: .cproject  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  commands.c  commands.h  main.c  process_message.c  process_message.h  project_specific.h  remote_evt.c  remote_evt.h
